Fixed modal scrolling on small devices

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -181,6 +181,5 @@ html::-webkit-scrollbar-thumb,
 	top: 0;
 	width: 100%;
 	height: 100%;
-	overflow: hidden;
 	@apply bg-neutral bg-opacity-50;
 }
